--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <!--Menu-->
         <ul>
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Packages</a></li>
-          <li><a href="#">Destination</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="">Packages</a></li>
+          <li><a href="">Destination</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Contact Us</a></li>
         </ul>
       </div>
 
